--- a/src/components/ChatsSidebar.css
+++ b/src/components/ChatsSidebar.css
@@ -11,10 +11,11 @@
 
 .header {
   display: flex;
-  flex-direction: row;
+  flex-direction: row-reverse;
   align-items: center;
+  justify-content: flex-start;
   margin-bottom: 20px;
-  width: 285px;
+  width: 100%;
   height: 32px;
 }
 
@@ -25,10 +26,16 @@
   line-height: 16px;
   letter-spacing: 0.5px;
   text-align: right;
+  margin: 0;
+  margin-left: 10px;
 }
 
 .new-chat-icon {
   cursor: pointer;
+  font-size: 24px;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-right: 280px;
 }
 
 .search-bar {
